feat: add api endpoint for updating permission setting
