# api/src/routes/api/permission.ts
@@ -1,7 +1,10 @@
 import express from 'express'
 import { PermissionController } from '../../controllers/'
 import { authenticateAccessToken, verifyAdmin } from '../../middlewares'
-import { registerPermissionValidation } from '../../utils'
+import {
+  registerPermissionValidation,
+  updatePermissionValidation
+} from '../../utils'
 
 const permissionRouter = express.Router()
 const controller = new PermissionController()
@@ -32,4 +35,22 @@ permissionRouter.post(
   }
 )
 
+permissionRouter.patch(
+  '/:permissionId',
+  authenticateAccessToken,
+  verifyAdmin,
+  async (req: any, res) => {
+    const { permissionId } = req.params
+
+    const { error, value: body } = updatePermissionValidation(req.body)
+    if (error) return res.status(400).send(error.details[0].message)
+
+    try {
+      const response = await controller.updatePermission(permissionId, body)
+      res.send(response)
+    } catch (err: any) {
+      res.status(403).send(err.toString())
+    }
+  }
+)
 export default permissionRouter
